[gd_scene load_steps=2 format=3 uid="uid://w8idiqvb3w7r"]

[ext_resource type="Script" path="res://SimpleDialogueBuilder.gd" id="1_c3re5"]

[node name="SimpleDialogueBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3re5")

[node name="DialogueGraph" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 32.0

[node name="Label" type="Label" parent="ButtonContainer"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 32.0
text = "Create new:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewKey" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 128.0
offset_right = 208.0
offset_bottom = 32.0
text = "Key"

[node name="NewDialogue" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 224.0
offset_right = 304.0
offset_bottom = 32.0
text = "Dialogue
"

[node name="NewResponseBranch" type="Button" parent="ButtonContainer"]
layout_mode = 0
offset_left = 320.0
offset_right = 400.0
offset_bottom = 32.0
text = "Response"

[node name="Export" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(80, 32)
layout_mode = 0
offset_left = 1184.0
offset_right = 1264.0
offset_bottom = 32.0
text = "Export"

[connection signal="connection_request" from="DialogueGraph" to="." method="_on_dialogue_graph_connection_request"]
[connection signal="delete_nodes_request" from="DialogueGraph" to="." method="_on_dialogue_graph_delete_nodes_request"]
[connection signal="pressed" from="ButtonContainer/NewKey" to="." method="_on_new_key_pressed"]
[connection signal="pressed" from="ButtonContainer/NewDialogue" to="." method="_on_new_dialogue_pressed"]
[connection signal="pressed" from="ButtonContainer/NewResponseBranch" to="." method="_on_new_response_branch_pressed"]
[connection signal="pressed" from="ButtonContainer/Export" to="." method="_on_export_pressed"]
